@@ -1,9 +1,12 @@
 \name{NEWS}
 \title{News for Package 'FDboost'}
 
-\section{Changes in FDboost version 0.3-4 (2020-07-29)}{
+\section{Changes in FDboost version 0.3-4 (2020-08-31)}{
   \subsection{Bug-fixes}{
     \itemize{
+    \item Fix predict() for bsignal with newdata and the functional covariate 
+    given as numeric matrix, raised in 
+    \href{https://github.com/boost-R/FDboost/issues/17}{#17}
     \item Deprecated argument \code{LINPACK} in \code{solve} removed.
     }
     }
